--- a/relatorio/templates/listagem.html
+++ b/relatorio/templates/listagem.html
@@ -1,130 +1,172 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container text-center">
+<div class="container text-center">
     <div class="row justify-contente-start">
-    <div class="row align-items-center">
-    <div class="col">
-        <div class="row">
-                <div class="col-12 search-div">
-                    <form method="GET" id="search-form">
-                        <div class="input-group mb-3">
-                            <input type="text" name="buscar" class="form-control" placeholder="Buscar" required>
-                            <input type="hidden" name="ordenar" value="{{ordenar}}">
-                            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
-                        </div>
-                    </form>
+        <div class="row align-items-center">
+            <div class="col">
+                <div class="row">
+                    <div class="col-12 search-div">
+                        <form method="GET" id="search-form">
+                            <div class="input-group mb-3">
+                                <input type="text" name="buscar" class="form-control" placeholder="Buscar" required>
+                                <input type="hidden" name="ordenar" value="{{ordenar}}">
+                                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar
+                                </button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        {% if messages %}
-            {% for i in messages %}
+                {% if messages %}
+                {% for i in messages %}
                 <div class="alert {{ i.tags }} alert-dismissible fade show" role="alert">
                     {{i}}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-            {% endfor %}
-        {% endif %}
-    {% if registros %}
-    <table class="table table-borderless" id="tabela-listar">
-        <thead>
-          <tr>
-             {% for th in columns %}
-               <th scope="col">{{ th }}
-                    <form method="GET">
-                      <input type="hidden" name="buscar" value="{{buscar}}">
-                      {% if urlx == th %}
-                        <button class="btn btn-light" type="submit" name="ordenar" value=-{{th}}>
-                            <span class="material-icons">arrow_drop_up</span>
-                        </button>
-                      {% else %}
-                        <button class="btn btn-light" type="submit" name="ordenar" value={{th}}>
-                            <span class="material-icons">arrow_drop_down</span>
-                        </button>
-                      {% endif %}
-                  </form>
-               </th>
                 {% endfor %}
-          </tr>
-        </thead>
-        <tbody>
-          {% for registro in registros  %}
-           <tr>
-            {% for h in columns  %}
-             <td>{{ registro|get_dict_item:h }}</td>
-            {% endfor %}
-             <td>
-                 {% if pk == 'id' %}
-                 <form method="GET" action="{% url 'delete_classificacao' registro.id %}">
-    		            <button type="submit" class="btn btn-light">
-         		            <span class="material-icons">delete</span>
-    		            </button>
-                 </form>
-                 {% endif %}
-                 {% if pk == 'codigo' %}
-                 <form method="GET" action="{% url 'delete_sistema' registro.codigo %}">
-    		            <button type="submit" class="btn btn-light">
-         		            <span class="material-icons">delete</span>
-    		            </button>
-                 </form>
-                 {% endif %}
-                 {% if pk == 'pk_interna' %}
-                 <form method="GET" action="{% url 'delete_ocorrencia' registro.pk_interna %}">
-    		            <button type="submit" class="btn btn-light">
-         		            <span class="material-icons">delete</span>
-    		            </button>
-                 </form>
-                 {% endif %}
-                 {% if pk == 'cod_carteira' %}
-                 <form method="GET" action="{% url 'delete_carteira' registro.cod_carteira %}">
-    		            <button type="submit" class="btn btn-light">
-         		            <span class="material-icons">delete</span>
-    		            </button>
-                 </form>
-                 {% endif %}
-             </td>
-             <td>
-                 {% if pk == 'pk_interna' %}
-                 <form method="GET" action="{% url 'update_ocorrencia' registro.pk_interna %}">
-    		            <button type="submit" class="btn btn-light">
-         		            <span class="material-icons">create</span>
-    		            </button>
-                 </form>
-                 {% endif %}
-                 {% if pk == 'codigo' %}
-                 <form method="GET" action="{% url 'update_sistema' registro.codigo %}">
-    		            <button type="submit" class="btn btn-light">
-         		            <span class="material-icons">create</span>
-    		            </button>
-                 </form>
-                 {% endif %}
-                 {% if pk == 'cod_carteira' %}
-                 <form method="GET" action="{% url 'update_carteira' registro.cod_carteira %}">
-    		            <button type="submit" class="btn btn-light">
-         		            <span class="material-icons">create</span>
-    		            </button>
-                 </form>
-                 {% endif %}
-                 {% if pk == 'id' %}
-                 <form method="GET" action="{% url 'update_classificacao' registro.id %}">
-    		            <button type="submit" class="btn btn-light">
-         		            <span class="material-icons">create</span>
-    		            </button>
-                 </form>
-                 {% endif %}
-             </td>
-           </tr>
-          {% endfor %}
-        </tbody>
-    </table>
-    {% else %}
-    <div>
-      <p>Registro não encontrado</p>
-    </div>
-    {% endif %}
+                {% endif %}
+                {% if registros %}
+                <table class="table table-borderless" id="tabela-listar">
+                    <thead>
+                    <tr>
+                        {% for th in columns %}
+                        <th scope="col">{{ th }}
+                            <form method="GET">
+                                <input type="hidden" name="buscar" value="{{buscar}}">
+                                {% if urlx == th %}
+                                <button class="btn btn-light" type="submit" name="ordenar" value=-{{th}}>
+                                    <span class="material-icons">arrow_drop_up</span>
+                                </button>
+                                {% else %}
+                                <button class="btn btn-light" type="submit" name="ordenar" value={{th}}>
+                                    <span class="material-icons">arrow_drop_down</span>
+                                </button>
+                                {% endif %}
+                            </form>
+                        </th>
+                        {% endfor %}
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for registro in registros %}
+                    <tr>
+                        {% for h in columns %}
+                        <td>{{ registro|get_dict_item:h }}</td>
+                        {% endfor %}
+                        <td>
+                            {% if pk == 'id' %}
+                            <form method="GET" action="{% url 'delete_classificacao' registro.id %}">
+                                <button type="submit" class="btn btn-light">
+                                    <span class="material-icons">delete</span>
+                                </button>
+                            </form>
+                            {% endif %}
+                            {% if pk == 'codigo' %}
+                            <form method="GET" action="{% url 'delete_sistema' registro.codigo %}">
+                                <button type="submit" class="btn btn-light">
+                                    <span class="material-icons">delete</span>
+                                </button>
+                            </form>
+                            {% endif %}
+                            {% if pk == 'pk_interna' %}
+                            <form method="GET" action="{% url 'delete_ocorrencia' registro.pk_interna %}">
+                                <button type="submit" class="btn btn-light">
+                                    <span class="material-icons">delete</span>
+                                </button>
+                            </form>
+                            {% endif %}
+                            {% if pk == 'cod_carteira' %}
+                            <form method="GET" action="{% url 'delete_carteira' registro.cod_carteira %}">
+                                <button type="submit" class="btn btn-light">
+                                    <span class="material-icons">delete</span>
+                                </button>
+                            </form>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if pk == 'pk_interna' %}
+                            <form method="GET" action="{% url 'update_ocorrencia' registro.pk_interna %}">
+                                <button type="submit" class="btn btn-light">
+                                    <span class="material-icons">create</span>
+                                </button>
+                            </form>
+                            {% endif %}
+                            {% if pk == 'codigo' %}
+                            <form method="GET" action="{% url 'update_sistema' registro.codigo %}">
+                                <button type="submit" class="btn btn-light">
+                                    <span class="material-icons">create</span>
+                                </button>
+                            </form>
+                            {% endif %}
+                            {% if pk == 'cod_carteira' %}
+                            <form method="GET" action="{% url 'update_carteira' registro.cod_carteira %}">
+                                <button type="submit" class="btn btn-light">
+                                    <span class="material-icons">create</span>
+                                </button>
+                            </form>
+                            {% endif %}
+                            {% if pk == 'id' %}
+                            <form method="GET" action="{% url 'update_classificacao' registro.id %}">
+                                <button type="submit" class="btn btn-light">
+                                    <span class="material-icons">create</span>
+                                </button>
+                            </form>
+                            {% endif %}
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        {% if tem_page_anterior %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ num_page_anterior }}"
+                               aria-label="Previous">
+                                Previous
+                            </a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled">
+                            <span class="page-link" aria-label="Previous">
+                                Previous
+                            </span>
+                        </li>
+                        {% endif %}
 
+                        {% for num in lista %}
+                            {% if num == num_pagina_atual %}
+                                <li class="page-item active"><span class="page-link">{{ num }}</span></li>
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if tem_prox_pagina %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ num_prox_pagina }}" aria-label="Next">
+                                Next
+                            </a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled">
+                            <span class="page-link" aria-label="Next">
+                                Next
+                            </span>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+
+                {% else %}
+                <div>
+                    <p>Registro não encontrado</p>
+                </div>
+                {% endif %}
+
+            </div>
+        </div>
     </div>
-    </div>
-    </div>
-    </div>
+</div>
 
 {% endblock %}
 
